syntax = "proto3";

package greetbidirectionalstream;

option go_package = "greetbidirectionalstreampb";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest { Greeting greeting = 1; }

message GreetResponse { string result = 1; }

service GreetService {
  // Server Streaming
  rpc GreetServerStream(stream GreetRequest) returns (stream GreetResponse);
}